FreshReleases: Fix release card image styles Now that we use LazyLoadImage component, it wraps the img tag inside a span.

--- a/listenbrainz/webserver/static/css/fresh-releases.less
+++ b/listenbrainz/webserver/static/css/fresh-releases.less
@@ -261,7 +261,7 @@
     @media (max-width: 576px) {
       grid-template-columns: repeat(2, 1fr);
       & > .release-card-container {
-        & > .release-coverart {
+        & > .lazy-load-image-background .release-coverart {
           width: 11em;
           height: 11em;
         }
@@ -277,7 +277,7 @@
     @media (min-width: 576px) and (max-width: @screen-md) {
       grid-template-columns: repeat(3, 1fr);
       & > .release-card-container {
-        & > .release-coverart {
+        & > .lazy-load-image-background .release-coverart {
           width: 11.75em;
           height: 11.75em;
         }
@@ -293,7 +293,7 @@
     @media (min-width: @screen-md) and (max-width: @screen-lg) {
       grid-template-columns: repeat(4, 1fr);
       & > .release-card-container {
-        & > .release-coverart {
+        & > .lazy-load-image-background .release-coverart {
           width: 12em;
           height: 12em;
         }
@@ -309,7 +309,7 @@
     @media (min-width: 1200px) {
       grid-template-columns: repeat(5, 1fr);
       & > .release-card-container {
-        & > .release-coverart {
+        & > .lazy-load-image-background .release-coverart {
           width: 11em;
           height: 11em;
         }
